 - toevoeging: Plug-n-play upload en uitvoer EasyBlocks programma regstreeks op EasyLab4kids apparaat (benodigd: NodeJS).

0.3.07010 2017.07.12
 - toevoeging: Board support nou ook meerde COM-poorte en aansluitinge.
 - toevoeging: I2C LCD scherm.

0.3.07014 2017.07.25
 - toevoeging: CHIP io support
 - toevoeging: BBC Microbit button A, B en kompas support.
 - toevoeging: Raspbery Pi  GPIO-poort support op Sonar, LCD en buttons.
 - toevoeging: LEGO EV3 afstand sensor mogelijkheid te gebruik.
 - BUGFIX: meerdere arduino's per computer moontlik.
 - BUGFIX: I2C LCD scherm text posities kan aanwys.
 - BUGFIX: Servo sweep en kan nu ook stop.

0.3.07015 2017.08.23
 - BUGFIX: MacOS USB-serialpoort name reggemaak.

0.3.07022 2017.10.01
 - toevoeging: Laai een EasyBlocks bestand van XML.
 - toevoeging: GPS sensor.
 - toevoeging: Adafruit BNO055 9DOF oreiëntatiesensor.
 - toevoeging: Raspberry Pi GPIO-poorte regstreeks aanstuurbaar as jy 'n Linux bord gebruik.
 - toevoeging: L293D motordiver support, soos Adafruit motorshield.
 - toevoeging: DigitalRead en DigitalWrite is in aparte IO-poorte groep.
 - toevoeging: Robot motorbeheer en events, opvang wanneer een motor byvb draait.
 - wysiging:  gebeuetenisse van sonar en PIR in een aparte Sensor gebeurtenisgroep.

0.3.07026 2017.10.10
 - toevoeging: Relay support.
 - toevoeging: 8x8 LED Matrix support.
 - wysiging:  gebeuetenisse van SPDT knop en aan-uitknop.
 - wysiging: alle sensoren het events.
 - BUGFIX: robotmotors verstaan nou dat links = links

 1.0 2017.10.11
 Eerste release volledig release.

 1.01 2017.10.13
 - toevoeging: Photoresitor support.

 1.02 2017.10.16
 - toegevoegd: Bluetooth serialpoort vir MacOS en Linux.
 - BUGFIX: spelfoute mbt MacOS serialpoort.
 - BUGFIX: EasyLab V2 IO-poorten is anders dan EasLab V1. Eindgebruiker: update jouw block frontend code!

=====================
KNOWN BUGS/ISSUES;

=====================


Meer info?
- Kontak Michiel Erasmus
- e-mail: thebapodcast@gmail.com