@@ -527,9 +527,12 @@
             <!--block type="easylabs_image_create"></block-->
         </category>
 
-        <category name="LEDjes en geluid">
+        <category name="LEDjes">
             <block type="ledje"></block>
             <block type="ledje_knipper_fade"></block>
+        </category>
+
+        <category name="Geluid">
             <block type="piezo_muziek"></block>
             <!--block type="piezo1"></block-->
             <block type="declare_piezo1"></block>
