@@ -72,6 +72,7 @@ CHANGELOG EasyLab4kids  zie http://erasmus-ict.nl, contact MICHIEL ERASMUS tel: 
 
  1.02 2017.10.16
  - toegevoegd: Bluetooth serialpoort vir MacOS en Linux.
+ - wijziging: Piezzo geluid om frontend na eie groep "geluid" verplaatsd.
  - BUGFIX: spelfoute mbt MacOS serialpoort.
  - BUGFIX: EasyLab V2 IO-poorten is anders dan EasLab V1. Eindgebruiker: update jouw block frontend code!
 
